完成个别组件

--- a/static/lang/english.json
+++ b/static/lang/english.json
@@ -5,7 +5,7 @@
 	"nav_help": "Technical Support",
 	"nav_about": "About us",
 	"nav_news": "News",
-	"nav_register": "Register",
+	"nav_sign_up": "Sign up",
 	"nav_sign_in": "Sign in",
 	"nav_panel": "Panel",
 	"nav_wallet": "Wallet",
@@ -16,6 +16,7 @@
 	"title_retrieve_account": "Retrieve account",
 	"title_account": "Account",
 	"title_password": "Password",
+	"vcode": "VCode",
 	"form_phone": "Phone",
 	"form_phone_tip": "Not domestic need to add area code",
 	"form_email": "Email",
