--- a/static/lang/chinese.json
+++ b/static/lang/chinese.json
@@ -5,7 +5,7 @@
 	"nav_help": "技术支持",
 	"nav_about": "关于我们",
 	"nav_news": "新闻动态",
-	"nav_register": "注册",
+	"nav_sign_up": "注册",
 	"nav_sign_in": "登录",
 	"nav_panel": "控制面板",
 	"nav_wallet": "硬件钱包",
@@ -16,7 +16,7 @@
 	"title_retrieve_account": "找回密码",
 	"title_account": "账户",
 	"title_password": "密码",
-	"code": "验证码",
+	"vcode": "验证码",
 	"form_phone": "手机号码",
 	"form_phone_tip": "不是国内需要添加区号",
 	"form_email": "邮箱",
