增加新页面

--- a/static/lang/chinese.json
+++ b/static/lang/chinese.json
@@ -93,5 +93,22 @@
 	"news_hot": "热点新闻",
 	"news_new": "最新资讯",
 	"news_related": "相关新闻",
-	"add_shopping_cart": "加入购物车"
+	"add_shopping_cart": "加入购物车",
+	"order_info": "订单信息",
+	"order_currency": "币种",
+	"order_miner": "机型",
+	"order_computing_power": "算力",
+	"order_duration": "周期",
+	"order_pool": "矿池",
+	"order_pool_desc": "订单生效之后可以再修改矿池",
+	"order_usage_fee": "使用费",
+	"order_mining_days": "挖矿天数",
+	"please_choose": "请选择",
+	"order_manage_fee": "维护费",
+	"order_manage_fee_tip": "( 价格 x 算力 x 挖矿天数 )",
+	"pay_way": "支付方式",
+	"pay_way_tip": "支持支付宝、微信、网银支付",
+	"order_count": "总计",
+	"read_and_agree": "已阅读并同意",
+	"user_protocol": "《用户服务协议》"
 }
