--- a/static/lang/english.json
+++ b/static/lang/english.json
@@ -34,7 +34,7 @@
 	"hashrate": "hashrate",
 	"weight": "weight",
 	"delivery_date": "delivery time",
-	"total": "total",
+	"total": "Total",
 	"day": "day",
 	"solded": "sold",
 	"buy_now": "Buy now",
@@ -77,7 +77,7 @@
 	"tab_basic_info": "Basic info",
 	"tab_authentication": "Real authentication",
 	"tab_shipping_address": "Shipping address",
-	"tab_share_reward_coins": "share reward coins",
+	"tab_share_reward_coins": "Share reward coins",
 	"title_address": "Saved address",
 	"tab_calculation_order": "Calculation order",
 	"tab_maintenance_fee_order": "Maintenance fee order",
@@ -93,5 +93,22 @@
 	"news_hot": "Hot news",
 	"news_new": "Latest News",
 	"news_related": "Related news",
-	"add_shopping_cart": "Add shopping cart"
+	"add_shopping_cart": "Add shopping cart",
+	"order_info": "Order info",
+	"order_currency": "Currency",
+	"order_miner": "Miner",
+	"order_computing_power": "Computing power",
+	"order_duration": "Duration",
+	"order_pool": "Mine pool",
+	"order_pool_desc": "The mine pool can be modified after the order takes effect",
+	"order_usage_fee": "Usage fee",
+	"order_mining_days": "Mining days",
+	"please_choose": "Please choose",
+	"order_manage_fee": "Manage fee",
+	"order_manage_fee_tip": "Price * calculation power * mining days",
+	"pay_way": "Pay way",
+	"pay_way_tip": "Support Alipay, WeChat, online banking payment",
+	"order_count": "Count",
+	"read_and_agree": "Read and agree",
+	"user_protocol": "《User protocol》"
 }
