更改混入组件

--- a/static/lang/chinese.json
+++ b/static/lang/chinese.json
@@ -7,6 +7,7 @@
 	"nav_news": "新闻动态",
 	"nav_sign_up": "注册",
 	"nav_sign_in": "登录",
+	"nav_asset_manage": "资产管理",
 	"nav_panel": "控制面板",
 	"nav_wallet": "硬件钱包",
 	"nav_chip": "芯片",
@@ -80,7 +81,7 @@
 	"tab_share_reward_coins": "分享奖励",
 	"title_address": "已存地址",
 	"tab_calculation_order": "算力套餐订单",
-	"tab_maintenance_fee_order": "维护费订单",
+	"tab_manage_fee_order": "维护费订单",
 	"tab_shopping_order": "产品购买订单",
 	"tab_output_address": "收币地址",
 	"tab_message_setting": "提醒设置",
