--- a/static/lang/english.json
+++ b/static/lang/english.json
@@ -7,6 +7,7 @@
 	"nav_news": "News",
 	"nav_sign_up": "Sign up",
 	"nav_sign_in": "Sign in",
+	"nav_asset_manage": "Asset manage",
 	"nav_panel": "Panel",
 	"nav_wallet": "Wallet",
 	"nav_chip": "Chip",
@@ -31,12 +32,12 @@
 	"forgot_password": "Forgot password?",
 	"unit": "$",
 	"unit_name": "USD",
-	"hashrate": "hashrate",
-	"weight": "weight",
-	"delivery_date": "delivery time",
+	"hashrate": "Hashrate",
+	"weight": "Weight",
+	"delivery_date": "Delivery time",
 	"total": "Total",
 	"day": "day",
-	"solded": "sold",
+	"solded": "Sold",
 	"buy_now": "Buy now",
 	"btn_sign_out": "Sign out",
 	"foot_slogan": "Register an account and we will send you the latest news.",
@@ -80,7 +81,7 @@
 	"tab_share_reward_coins": "Share reward coins",
 	"title_address": "Saved address",
 	"tab_calculation_order": "Calculation order",
-	"tab_maintenance_fee_order": "Maintenance fee order",
+	"tab_manage_fee_order": "Manage fee order",
 	"tab_shopping_order": "Shopping order",
 	"tab_output_address": "Output address",
 	"tab_message_setting": "Message setting",
